# merkle-schemes

./: .gitignore  ChangeLog.md  Dockerfile  LICENSE  README.md  cabal.sandbox.config  default.nix  demo.md  hgit.cabal  merkle-dag-compare.cabal  merkle-schemes.nix  package.yaml  release.nix  session1.html  session2.html  stack.yaml
app/: Main.hs
gadt/Merkle/Store/: FileSystem.hs
merkle-schemes/: merkle-schemes.cabal  package.yaml
merkle-schemes-ext/: merkle-schemes-ext.cabal
merkle-schemes-ext/src/Merkle/Store/: FileSystem.hs  IPFS.hs  MockIPFS.hs  Network.hs
merkle-schemes-ext/src/Merkle/Types/: BlakeHash.hs
merkle-schemes-ext/test/Merkle/Store/: FileStoreSpec.hs  NetStoreSpec.hs  TestUtils.hs
merkle-schemes-higher/: default.nix  merkle-schemes-higher.cabal  merkle-schemes-higher.nix  package.yaml
merkle-schemes-higher-bt/: default.nix  merkle-schemes-higher-bt.cabal  package.yaml
merkle-schemes-higher-bt/src/Merkle/Higher/: BitTorrent.hs
merkle-schemes-higher-ext/: default.nix  merkle-schemes-higher-ext.cabal  merkle-schemes-higher-ext.nix  package.yaml
merkle-schemes-higher-ext/src/Merkle/Higher/Store/: IPFS.hs
merkle-schemes-higher/src/Merkle/Higher/: BitTorrent.hs  Store.hs  Types.hs
merkle-schemes-higher/src/Util/: HRecursionSchemes.hs
merkle-schemes/src/Merkle/: Functors.hs  Store.hs  Types.hs
merkle-schemes/src/Merkle/Store/: Deref.hs  FileSystem.hs  InMemory.hs  Network.hs
merkle-schemes/src/Merkle/Types/: IPFS.hs
merkle-schemes/src/Util/: RecursionSchemes.hs
mononoke/: default.nix  mononoke.cabal
mononoke/src/Merkle/Higher/: Mononoke.hs
src/: Commands.hs  Compare.hs  Deref.hs  Errors.hs  FileIO.hs  Ingress.hs  Main.hs  RecursionSchemes.hs  Render.hs  Search.hs  Store.hs  Types.hs
src/Data/Aeson/: Orphans.hs
src/Diff/: Types.hs
src/HGit/: Diff.hs  Gen.hs  Merge.hs  Network.hs  Repo.hs  Serialization.hs  Store.hs  Types.hs
src/HGit/Core/: Diff.hs  Merge.hs  Types.hs
src/HGit/Diff/: Types.hs
src/HGit/Runtime/: Capabilities.hs  Commands.hs  FileIO.hs  Network.hs  RunCmd.hs  Types.hs
src/HGit/Store/: Deref.hs  FileSystem.hs
src/HGit/Types/: Common.hs  HGit.hs  Merkle.hs  RepoState.hs
src/Merkle/: Functors.hs  Store.hs  Types.hs
src/Merkle/Higher/: BitTorrent.hs  Functors.hs  IPFS.hs  Store.hs  Types.hs
src/Merkle/Higher/Store/: Deref.hs  IPFS.hs  InMemory.hs
src/Merkle/Store/: Deref.hs  FileSystem.hs  InMemory.hs  Network.hs  Test.hs
src/Merkle/Tree/: Encoding.hs  Render.hs  Types.hs
src/Store/: Capability.hs  FileSystem.hs
src/Util/: HRecursionSchemes.hs  MyCompose.hs  RecursionSchemes.hs  These.hs  Util.hs
talk/: talk.cabal
talk/src/Control/: RecursionSchemes.hs
talk/src/DirTree/: FileIO.hs  FileStore.hs  Hashing.hs  Types.hs
talk/src/DirTree/Diff/: Lazy.hs  Simple.hs  Types.hs
test/: Main.hs  Spec.hs
test/Merkle/Store/: FileStoreSpec.hs  InMemoryStoreSpec.hs  NetStoreSpec.hs  TestUtils.hs
