name:                hgit
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Paul Kinsky
maintainer:          pkinsky@gmail.com
build-type:          Simple
cabal-version:       >=1.10


library
  hs-source-dirs: src
  exposed-modules:
        Commands
        Data.Aeson.Orphans
        Errors
        FileIO
        HGit.Diff
        HGit.Diff.Types
        HGit.Merge
        HGit.Network
        HGit.Repo
        Merkle.Functors
        Merkle.Store
        Merkle.Store.Deref
        Merkle.Store.FileSystem
        Merkle.Store.Network
        Merkle.Types
        HGit.Types.HGit
        HGit.Types.RepoState
        Util.RecursionSchemes
        Util.MyCompose
        Util.These
  build-depends: base >=4.8
               , aeson
               , base16-bytestring
               , bifunctors
               , bytestring
               , containers
               , cryptonite
               , directory
               , deriving-compat
               , free
               , http-client
               , hedgehog
               , memory
               , mtl
               , unordered-containers
               , pretty
               , optparse-applicative
               , random
               , recursion-schemes
               , safe-exceptions
               , servant
               , servant-client
               , servant-server
               , singletons
               , text
               , transformers
               , vector
  ghc-options: -Wall -Werror -Wno-redundant-constraints

  default-language:    Haskell2010
  extensions: DerivingStrategies
            , DeriveFunctor
            , DeriveFoldable
            , DeriveGeneric
            , DeriveTraversable
            , DataKinds
            , DefaultSignatures
            , FlexibleContexts
            , FlexibleInstances
            , LambdaCase
            , InstanceSigs
            , KindSignatures
            , NoStarIsType
            , OverloadedStrings
            , PolyKinds
            , RankNTypes
            , ScopedTypeVariables
            , TupleSections
            , TypeFamilies
            , StandaloneDeriving
            , TemplateHaskell
            , TypeApplications
            , TypeOperators


-- configuration for Unit tests and properties
test-suite tests
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  hs-source-dirs: test
  build-depends: base >= 4 && < 5
               , aeson
               , containers
               , hedgehog
               , http-types
               , hgit
               , hspec
               , singletons
               , temporary
               , transformers
               , wai
               , warp
               , http-client
               , safe-exceptions
               , servant-server
               , servant-client

  extensions: DeriveFunctor
            , DeriveFoldable
            , DeriveGeneric
            , DeriveTraversable
            , DataKinds
            , DefaultSignatures
            , FlexibleContexts
            , FlexibleInstances
            , LambdaCase
            , InstanceSigs
            , KindSignatures
            , NoStarIsType
            , OverloadedStrings
            , RankNTypes
            , ScopedTypeVariables
            , StandaloneDeriving
            , TupleSections
            , TypeFamilies
            , TemplateHaskell
            , TypeApplications
            , TypeOperators
            , PolyKinds




-- configuration for an executable
executable hgit
  hs-source-dirs: app
  main-is: Main.hs
  build-depends: base >= 4 && < 5
               , containers
               , directory
               , hgit
               , safe-exceptions
               , servant-client
               , servant-server
               , http-client
               , http-types
               , warp
  extensions: DeriveFunctor
            , DeriveFoldable
            , DeriveGeneric
            , DeriveTraversable
            , DataKinds
            , DefaultSignatures
            , FlexibleContexts
            , FlexibleInstances
            , LambdaCase
            , InstanceSigs
            , KindSignatures
            , NoStarIsType
            , OverloadedStrings
            , RankNTypes
            , ScopedTypeVariables
            , TupleSections
            , TypeFamilies
            , StandaloneDeriving
            , TemplateHaskell
            , TypeApplications
            , TypeOperators
