name:                merkle-dag-compare
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Paul Kinsky
maintainer:          pkinsky@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable mdc 
  main-is:             Main.hs
  extensions: RankNTypes
            , TypeOperators
            , PolyKinds
            , DeriveFunctor
            , DeriveFoldable
            , DeriveGeneric
            , DeriveTraversable
            , OverloadedStrings
            , ScopedTypeVariables
            , TupleSections
            , TypeFamilies

  ghc-options: -Wall 
             , -Werror

  build-depends: base >=4.8
               , bytestring
               , aeson
               , containers
               , directory
               , free
               , hashable
               , mtl
               , unordered-containers
               , pretty
               , optparse-applicative
               , random
               , recursion-schemes
               , semigroups
               , text
               , transformers
  hs-source-dirs:      src
  default-language:    Haskell2010
