name:                merkle-dag-compare
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Paul Kinsky
maintainer:          pkinsky@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable hgit
  main-is: Main.hs
  other-modules:
        Commands
        Errors
        FileIO
        HGit.Diff
        HGit.Diff.Types
        HGit.Repo
        HGit.Serialization
        HGit.Store
        HGit.Store.Deref
        HGit.Store.FileSystem
        HGit.Types
        HGit.Types.Common
        HGit.Types.Merkle
        HGit.Types.RepoState
        Util.HRecursionSchemes
        Util.MyCompose
        Util.These


  extensions: RankNTypes
            , PolyKinds
            , DeriveFunctor
            , DeriveFoldable
            , DeriveGeneric
            , DeriveTraversable
            , DataKinds
            , DefaultSignatures
            , EmptyCase
            , ExistentialQuantification
            , FlexibleContexts
            , FlexibleInstances
            , GADTs
            , LambdaCase
            , InstanceSigs
            , KindSignatures
            , NoStarIsType
            , OverloadedStrings
            , PolyKinds
            , RankNTypes
            , ScopedTypeVariables
            , TupleSections
            , TypeFamilies
            , ScopedTypeVariables
            , StandaloneDeriving
            , TemplateHaskell
            , TypeApplications
            , TypeOperators
            , UndecidableInstances

  ghc-options: -Wall -Werror -Wno-redundant-constraints

  build-depends: base >=4.8
               , aeson
               , bytestring
               , containers
               , constraints
               , compdata
               , directory
               , free
               , hashable
               , mtl
               , unordered-containers
               , pretty
               , optparse-applicative
               , random
               , recursion-schemes
               , safe-exceptions
               , singletons
               , text
               , transformers
               , vector
  hs-source-dirs:      src
  default-language:    Haskell2010
