cabal-version: 1.12

name:           merkle-schemes-ext
version:        0.1.0.0
synopsis:       merkle all the things
category:       Development
homepage:       https://github.com/pkinsky/merkle-schemes#readme
author:         Paul Kinsky
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/pkinsky/merkle-schemes

library
  exposed-modules:
      Merkle.Store.FileSystem
      Merkle.Store.IPFS
      Merkle.Store.MockIPFS
      Merkle.Store.Network
      Merkle.Types.BlakeHash
  other-modules:
      Paths_merkle_schemes_ext
  hs-source-dirs:
      src
  default-extensions: DeriveFunctor DeriveFoldable DeriveGeneric DeriveTraversable DataKinds FlexibleContexts FlexibleInstances LambdaCase KindSignatures OverloadedStrings PolyKinds RankNTypes ScopedTypeVariables StandaloneDeriving TemplateHaskell TupleSections TypeOperators
  ghc-options: -Wall -Werror
  build-depends:
      aeson
    , aeson-pretty
    , base >=4.8
    , base16-bytestring
    , base64-bytestring
    , bifunctors
    , bytestring
    , containers
    , cryptonite
    , deriving-compat
    , directory
    , free
    , http-client
    , lens
    , lens-aeson
    , memory
    , merkle-schemes
    , mtl
    , optparse-applicative
    , pretty
    , random
    , recursion-schemes
    , safe-exceptions
    , servant
    , servant-client
    , servant-server
    , text
    , transformers
    , unordered-containers
    , vector
    , warp
    , wreq
  default-language: Haskell2010

test-suite spec
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Merkle.Store.FileStoreSpec
      Merkle.Store.InMemoryStoreSpec
      Merkle.Store.NetStoreSpec
      Merkle.Store.TestUtils
  hs-source-dirs:
      test
  default-extensions: DeriveFunctor DeriveFoldable DeriveGeneric DeriveTraversable DataKinds FlexibleContexts FlexibleInstances LambdaCase KindSignatures OverloadedStrings PolyKinds RankNTypes ScopedTypeVariables StandaloneDeriving TemplateHaskell TupleSections TypeOperators
  ghc-options: -Wall -Werror
  cpp-options: -DTEST
  build-tool-depends:
      hspec-discover:hspec-discover
  build-depends:
      aeson
    , aeson-pretty
    , base >=4.8
    , base16-bytestring
    , base64-bytestring
    , bifunctors
    , bytestring
    , containers
    , cryptonite
    , deriving-compat
    , directory
    , free
    , hedgehog
    , hspec
    , http-client
    , hw-hspec-hedgehog
    , lens
    , lens-aeson
    , merkle-schemes
    , merkle-schemes-ext
    , mtl
    , optparse-applicative
    , pretty
    , recursion-schemes
    , safe-exceptions
    , servant
    , servant-client
    , servant-server
    , temporary
    , text
    , transformers
    , unordered-containers
    , vector
    , warp
    , wreq
  default-language: Haskell2010
