cabal-version: 1.12

name:           mononoke
version:        0.1.0.0
synopsis:       merkle all the things (higher kinded, exts)
category:       Development
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/inanna-malick/merkle-schemes

library
  exposed-modules:
      Merkle.Higher.Store.IPFS
  other-modules:
      Paths_merkle_schemes_higher_ext
  hs-source-dirs:
      src
  default-extensions: DeriveFunctor DeriveFoldable DeriveGeneric DeriveTraversable DataKinds FlexibleContexts FlexibleInstances LambdaCase KindSignatures OverloadedStrings PolyKinds RankNTypes ScopedTypeVariables StandaloneDeriving TemplateHaskell TupleSections TypeOperators
  ghc-options: -Wall -Werror
  build-depends:
      aeson
    , aeson-pretty
    , base >=4.8
    , base64-bytestring
    , bifunctors
    , bytestring
    , containers
    , deriving-compat
    , directory
    , free
    , http-client
    , lens
    , lens-aeson
    , memory
    , merkle-schemes-higher
    , mtl
    , optparse-applicative
    , pretty
    , random
    , safe-exceptions
    , servant
    , servant-client
    , servant-server
    , singletons
    , text
    , transformers
    , vector
    , warp
    , wreq
  default-language: Haskell2010
