cabal-version: 1.12

name:           talk
version:        0.1.0.0
synopsis:       suplemental material for talk
category:       Development
author:         Paul Kinsky
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/pkinsky/merkle-schemes

library
  exposed-modules:
      DirTree.FileIO
      DirTree.Types
      DirTree.FileStore
      DirTree.Diff.Lazy
      DirTree.Diff.Simple
      DirTree.Diff.Types
      Control.RecursionSchemes
      Data.Crypto.Hash
  other-modules:
      Paths_talk
  hs-source-dirs:
      src
  default-extensions: DeriveFunctor DeriveFoldable DeriveGeneric DeriveTraversable DataKinds FlexibleContexts FlexibleInstances LambdaCase KindSignatures OverloadedStrings PolyKinds RankNTypes ScopedTypeVariables StandaloneDeriving TemplateHaskell TupleSections TypeOperators
  ghc-options: -Wall -Werror
  build-depends:
      aeson
    , base >=4.8
    , base16-bytestring
    , base64-bytestring
    , bifunctors
    , bytestring
    , containers
    , cryptonite
    , deriving-compat
    , directory
    , free
    , http-client
    , mtl
    , memory
    , pretty
    , random
    , recursion-schemes
    , safe-exceptions
    , text
    , transformers
    , unordered-containers
    , vector
    , warp
    , wreq
  default-language: Haskell2010
