cabal-version: 1.12

name:           talk
version:        0.1.0.0
synopsis:       suplemental material for talk
category:       Development
author:         Inanna Malick
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/inanna-malick/merkle-schemes

library
  exposed-modules:
      DirTree.FileIO
      DirTree.Hashing
      DirTree.Types
      DirTree.FileStore
      DirTree.Diff.Lazy
      DirTree.Diff.Simple
      DirTree.Diff.Types
      Control.RecursionSchemes
  other-modules:
      Paths_talk
  hs-source-dirs:
      src
  default-extensions: DeriveFunctor DeriveFoldable DeriveGeneric DeriveTraversable DataKinds FlexibleContexts FlexibleInstances LambdaCase KindSignatures OverloadedStrings PolyKinds RankNTypes ScopedTypeVariables StandaloneDeriving TemplateHaskell TupleSections TypeOperators
  ghc-options: -Wall -Werror
  build-depends:
      aeson
    , base >=4.8
    , base16-bytestring
    , base64-bytestring
    , bytestring
    , containers
    , cryptonite
    , deriving-compat
    , directory
    , mtl
    , memory
    , pretty
    , text
    , transformers
    , unordered-containers
    , vector
  default-language: Haskell2010
